--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,5 +29,8 @@ jobs:
     default:
       jobs:
         - create_and_deploy_front_end
-        - promote_to_production
+        - promote_to_production:
+          requires:
+            - create_and_deploy_front_end
+
           
